--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint client/; exit 0",
+    "lint-fix": "eslint --fix client/; exit 0"
   },
   "author": "wei.zhao",
   "license": "ISC",
@@ -21,7 +23,8 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "velocity-react": "^1.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
@@ -30,6 +33,12 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "css-loader": "^0.28.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "gulp": "^3.9.1",
     "gulp_mcss": "^0.3.0",
     "style-loader": "^0.18.1",
