--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react": "^7.0.1",
     "gulp": "^3.9.1",
     "gulp_mcss": "^0.3.0",
+    "mass": "^0.1.0",
     "style-loader": "^0.18.1",
     "webpack": "^1.14.0"
   }
