--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "react-scripts test --env=jsdom",
     "lint": "eslint client/; exit 0",
     "lint-fix": "eslint --fix client/; exit 0"
   },
@@ -32,7 +32,9 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "chai": "^4.0.2",
     "css-loader": "^0.28.3",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-airbnb-base": "^11.2.0",
@@ -42,6 +44,9 @@
     "gulp": "^3.9.1",
     "gulp_mcss": "^0.3.0",
     "mass": "^0.1.0",
+    "react-addons-perf": "^15.4.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-scripts": "^1.0.7",
     "style-loader": "^0.18.1",
     "webpack": "^1.14.0"
   }
